update structure, make pkg

--- a/notebooks/matrix_selectors.ipynb
+++ b/notebooks/matrix_selectors.ipynb
@@ -25,10 +25,10 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from src.fake_data import generate_fake_data\n",
+    "from genomeselect.synthetic_data import generate_synthetic_data\n",
     "\n",
     "\n",
-    "ec_data, abundance_data = generate_fake_data(\n",
+    "ec_data, abundance_data = generate_synthetic_data(\n",
     "    n_genomes=100,\n",
     "    n_ec_numbers=850,\n",
     "    min_ec=650, max_ec=800,\n",
@@ -46,54 +46,6 @@
     "plt.xlabel('Relative Abundance')\n",
     "plt.ylabel('Frequency')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example using clustering to select subset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of genomes: 10\n",
-      "Number of EC numbers: 835\n",
-      "Total EC numbers covered: 571\n",
-      "Selected representative genomes:\n",
-      "['OceanDNA-b16676', 'OceanDNA-b25795', 'OceanDNA-b2171']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from src.cluster_selector import select_representative_genomes_clustering\n",
-    "\n",
-    "\n",
-    "# Load your data\n",
-    "ec_path = \"data/fake_ec_numbers.tsv\"\n",
-    "ec_path = \"data/feature_prevalence.genomes.tsv\"\n",
-    "abundance_path = \"data/fake_abundance.tsv\"\n",
-    "abundance_path = \"data/taxonomic_abundance.genomes.tsv\"\n",
-    "\n",
-    "ec_data = pd.read_csv(ec_path, index_col=\"id_genome\", sep=\"\\t\")\n",
-    "abundance_data = pd.read_csv(abundance_path, index_col=\"id_genome\", sep=\"\\t\")\n",
-    "\n",
-    "# Run the selection algorithm\n",
-    "k = 3\n",
-    "selected_genomes = select_representative_genomes_clustering(\n",
-    "    ec_data, abundance_data, n_clusters=k\n",
-    ")\n",
-    "\n",
-    "print(\"Selected representative genomes:\")\n",
-    "print(selected_genomes)"
    ]
   },
   {
@@ -131,7 +83,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from src.matrix_selector import deterministic_subset_selection\n",
+    "from genomeselect.matrix_selector import deterministic_subset_selection\n",
     "\n",
     "\n",
     "ec_data = pd.read_csv(\"data/fake_ec_numbers.tsv\", index_col=\"id_genome\", sep=\"\\t\")\n",
@@ -195,7 +147,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from src.matrix_selector import weighted_deterministic_subset_selection\n",
+    "from genomeselect.matrix_selector import weighted_deterministic_subset_selection\n",
     "\n",
     "\n",
     "ec_data = pd.read_csv(\"data/fake_ec_numbers.tsv\", index_col=\"id_genome\", sep=\"\\t\")\n",
@@ -245,7 +197,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from src.matrix_selector import two_stage_deterministic_subset_selection\n",
+    "from genomeselect.matrix_selector import two_stage_deterministic_subset_selection\n",
     "\n",
     "\n",
     "ec_data = pd.read_csv(\"data/fake_ec_numbers.tsv\", index_col=\"id_genome\", sep=\"\\t\")\n",
@@ -298,7 +250,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from src.matrix_selector import weighted_two_stage_subset_selection\n",
+    "from genomeselect.matrix_selector import weighted_two_stage_subset_selection\n",
     "\n",
     "ec_data = pd.read_csv(\"data/fake_ec_numbers.tsv\", index_col=\"id_genome\", sep=\"\\t\")\n",
     "abundance_data = pd.read_csv(\"data/fake_abundance.tsv\", index_col=\"id_genome\", sep=\"\\t\")\n",
